chore: use URI to open git URLs